# Unsloth-qwen3.5-fusedcce

./: .gitignore  bench_32k.py  bench_32k_fp8.py  bench_cce.py  bench_default.py  bench_fp8.py  prepare_data.py  pyproject.toml  test_cce.py  test_data.jsonl  train.py  upload_data.py
configs/: axolotl_27b_64k.yaml  axolotl_9b_64k.yaml  ds_zero1.json
qwen3_cce/: __init__.py  cce_torch.py  cce_triton.py  fused_swiglu.py  loss.py
